...
                                        <textInputTraits key="textInputTraits"/>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="textField01"/>
                                        </userDefinedRuntimeAttributes>
                                        <connections>
...
                                        <textInputTraits key="textInputTraits"/>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="textField02"/>
                                        </userDefinedRuntimeAttributes>
                                        <connections>
...
                                        <rect key="frame" x="0.0" y="108" width="374" height="34"/>
                                        <color key="backgroundColor" systemColor="systemGray5Color"/>
                                        <accessibility key="accessibilityConfiguration" identifier="Label01"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <nil key="textColor"/>
...
                                        <rect key="frame" x="0.0" y="162" width="374" height="34"/>
                                        <color key="backgroundColor" systemColor="systemGray5Color"/>
                                        <accessibility key="accessibilityConfiguration" identifier="Label02"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <nil key="textColor"/>
...
                                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="eI4-No-62H">
                                        <rect key="frame" x="-2" y="216" width="378" height="35"/>
                                        <accessibility key="accessibilityConfiguration" identifier="Completion"/>
                                        <connections>
                                            <action selector="sliderDragged:" destination="BYZ-38-t0r" eventType="valueChanged" id="7lV-3M-dMB"/>
...
                                        <rect key="frame" x="0.0" y="324" width="374" height="35"/>
                                        <segments>
                                            <segment title="Alpha"/>
                                            <segment title="Omega"/>
                                        </segments>
                                        <connections>
...
                                <color key="backgroundColor" red="0.016804177310000001" green="0.19835099580000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <fontDescription key="fontDescription" type="system" weight="black" pointSize="15"/>
                                <state key="normal" title="Blue">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
